# fastapi-factory

./: .gitignore  pyproject.toml  readme.md
app/: main.py
app/module_one/: one.py
app/module_one/controller/: item.py
app/module_one/model/: item.py
app/module_one/resource/: item.py
app/module_one/schema/: item.py
app/module_two/: two.py
app/module_two/controller/: item.py
app/module_two/model/: item.py
app/module_two/resource/: item.py
app/module_two/schema/: item.py
